Insert metadata: Allow showing identifiers such as ISBN in the jacket page template

--- a/resources/jacket/template.xhtml
+++ b/resources/jacket/template.xhtml
@@ -39,6 +39,13 @@
                 </tr>
                 <tr data-calibre-jacket-searchable-tags="1" style="color:white; display:none"><td colspan="2">{searchable_tags}</td></tr>
             </table>
+			<!-- 
+                If you want to insert the identifiers you can do so either as a
+                comma separated list of links, just like they are displayed in
+                the Book details panel, or as individual entries, for example::
+				<div style="display: {display.identifiers}">{identifiers.links}</div>
+				<div style="display: {identifiers.display.isbn}">{identifiers.isbn}</div>
+			-->
             <div class="cbj_footer">{footer}</div>
         </div>
         <hr class="cbj_kindle_banner_hr" />
